--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -11,6 +11,8 @@
   <h2>기초 내용 정리</h2>
   <ul>
     <li><a href="./a_base_code.html">기본 코드형식 첫번째</a></li>
+    <!-- li>a[href="./table_01.html"]{table 구조 이해하기} -->
+    <li><a href="./table_01.html">table 구조 이해하기</a></li>
   </ul>
 </body>
 </html>
