--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -13,6 +13,7 @@
     <li><a href="./a_base_code.html">기본 코드형식 첫번째</a></li>
     <!-- li>a[href="./table_01.html"]{table 구조 이해하기} -->
     <li><a href="./table_01.html">table 구조 이해하기</a></li>
+    <li><a href="./table_to_div.html">table에서 보여준코드 일부 변경</a></li>
   </ul>
 </body>
 </html>
