CSS : html selector_01

--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -8,12 +8,18 @@
 <body>
   <h1><a href="./contents.html">웹기초 이해하기</a></h1>
   <hr />
-  <h2>기초 내용 정리</h2>
+  <h2><abbr title="hyper text markup language">HTML</abbr> 기초 내용 정리</h2>
   <ul>
     <li><a href="./a_base_code.html">기본 코드형식 첫번째</a></li>
     <!-- li>a[href="./table_01.html"]{table 구조 이해하기} -->
     <li><a href="./table_01.html">table 구조 이해하기</a></li>
     <li><a href="./table_to_div.html">table에서 보여준코드 일부 변경</a></li>
+  </ul>
+  <hr />
+
+  <h2><abbr title="cascading style sheets">CSS</abbr> 기초내용 정리</h2>
+  <ul>
+    <li><a href="./selector_01.html">CSS 선택자에 대한 첫번째</a></li>
   </ul>
 </body>
 </html>
