float개념 파악하기

--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -22,6 +22,7 @@
     <li><a href="./selector_01.html">CSS 선택자 첫번째</a></li>
     <li><a href="./selector_02.html">CSS 선택자 두번째</a></li>
     <li><a href="./selector_03.html">CSS 선택자 세번째</a></li>
+    <li><a href="./float.html">float기능이해하기</a></li>    
   </ul>
 </body>
 </html>
