float:초내용이해하기 정리

--- a/c_code/a_basic/html/float.html
+++ b/c_code/a_basic/html/float.html
@@ -65,6 +65,29 @@
         <div class="fl_02_11">fl_02_11</div>
         <div class="fl_02_12">fl_02_12</div>
       </div>
+    </div><!-- // .float_04 -->
+
+    <div class="float_05">
+      <h3>float과 clear내용 정리</h3>
+      <div class="sample_05">
+        <div class="sam_01">sam_01</div>
+        <div class="sam_02">sam_02</div>
+        <div class="sam_03">sam_03</div>
+        <div class="sam_04">sam_04</div>
+        <div class="sam_05">sam_05</div>
+        <div class="sam_06">sam_06</div>
+        <!-- 
+          <div class="clear_sample">
+          임시로 clear기능을 만들기
+          </div> -->
+
+        <!-- ::after -->
+         
+      </div>
+     <div class="sample_06">
+        위 박스 내용이 늘어나더라도, 
+        박스가 보이게 처리해보자
+      </div>
     </div>
 
 
