--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -22,7 +22,9 @@
     <li><a href="./selector_01.html">CSS 선택자 첫번째</a></li>
     <li><a href="./selector_02.html">CSS 선택자 두번째</a></li>
     <li><a href="./selector_03.html">CSS 선택자 세번째</a></li>
-    <li><a href="./float.html">float기능이해하기</a></li>    
+    <li><a href="./float.html">float기능이해하기</a></li>  
+    <li><a href="./mpbo.html">margin, padding, border, outline and box-sizing</a></li>  
   </ul>
 </body>
 </html>
+
