margin base and padding set

--- a/c_code/a_basic/html/mpbo.html
+++ b/c_code/a_basic/html/mpbo.html
@@ -23,9 +23,18 @@
         <li>margin_05</li>
         <li>margin_06</li>
         <li>margin_07</li>
-        <li>margin_08</li>
-        <li>margin_09</li>
-        <li>margin_10</li>
+      </ul>
+    </div><!--// .part -->
+    <!-- .part.padding>ul>li*7{padding_$$} -->
+    <div class="part padding">
+      <ul>
+        <li>padding_01</li>
+        <li>padding_02</li>
+        <li>padding_03</li>
+        <li>padding_04</li>
+        <li>padding_05</li>
+        <li>padding_06</li>
+        <li>padding_07</li>
       </ul>
     </div>
   </div>
