--- a/c_code/a_basic/html/mpbo.html
+++ b/c_code/a_basic/html/mpbo.html
@@ -63,7 +63,7 @@
         <li>border_04</li>
         <li>border_05</li>
         <li>border_06</li>
-        <li>border_07</li>
+        <li><span>border_07</span></li>
       </ul>
     </div><!-- // .border -->
 
