lauout_01 base set

--- a/c_code/a_basic/html/mpbo.html
+++ b/c_code/a_basic/html/mpbo.html
@@ -67,6 +67,21 @@
       </ul>
     </div><!-- // .border -->
 
+    <!-- .part.outline>ul>li*5{outline_$$} -->
+    <div class="part outline">
+      <ul>
+        <li>outline_01</li>
+        <li><a href="#">outline_02</a></li>
+        <li><button type="button">outline_03</button></li>
+        <li tabindex="0">outline_04</li>
+      </ul>
+    </div><!-- // .outline -->
+    <div class="part box_sizing">
+      <div>content-box</div>
+      <div>border-box</div>
+    </div>
+
+    
   </div><!-- // #wrap -->
   <!-- script -->
   <script></script>
