layout_02-1 base layout

--- a/c_code/b_layout_test/html/layout_02_result.html
+++ b/c_code/b_layout_test/html/layout_02_result.html
@@ -11,7 +11,15 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-
+    <div id="headBox"></div>
+    <div id="adViewBox"></div>
+    <div id="localNavBox"></div>
+    <div id="populaContentBox"></div>
+    <div id="newContentBox"></div>
+    <div id="recommendedContentBox"></div>
+    <div id="communityBox"></div>
+    <div id="miniAdBox"></div>
+    <div id="footBox"></div>
   </div> 
 
   <!-- script -->
