layout_02-3 page2 layout부분 작업

--- a/c_code/b_layout_test/html/layout_02_result.html
+++ b/c_code/b_layout_test/html/layout_02_result.html
@@ -11,15 +11,61 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    <div id="headBox"></div>
-    <div id="adViewBox"></div>
-    <div id="localNavBox"></div>
-    <div id="populaContentBox"></div>
-    <div id="newContentBox"></div>
-    <div id="recommendedContentBox"></div>
-    <div id="communityBox"></div>
+    <div id="headBox">
+      <h1 class="main_heading">site name</h1>
+      <div class="search_bar">search</div>
+      <div class="member">member</div>
+    </div>
+    <!-- // #headBox ============================== -->
+
+    <div id="adViewBox">
+      <!-- 광고영역 -->
+      <div class="view_outer">
+        광고 내용
+      </div>
+      <div class="view_indicator">
+        광고 순서 확인
+      </div>
+    </div>
+    <!-- // #adViewBox ============================== -->
+
+    <div id="localNavBox">
+      <div class="local_nav_outer">
+        local navigation
+      </div>
+    </div>
+    <!-- // #localNavBox ============================== -->
+
+    <div class="content_area">
+      <!-- content -->
+      <div id="populaContentBox">
+        <h3>인기 내용</h3>
+        <div class="con_area pop_con_area"></div>
+      </div>
+      <!-- // #populaContentBox ========================== -->
+      <div id="newContentBox">
+        <h3>최신 내용</h3>
+        <div class="con_area new_con_area"></div>
+      </div>
+      <!-- // #newContentBox ========================== -->
+      <div id="recommendedContentBox">
+        <h3>추천 내용</h3>
+        <div class="con_area recom_con_area"></div>
+      </div>
+      <!-- // #recommendedContentBox ====================== -->      
+      <div id="communityBox">
+        <h3>community</h3>
+        <div class="con_area community_area"></div>
+      </div>
+      <!-- // #communityBox ============================== -->
+    </div><!-- // .content_area -->
+
     <div id="miniAdBox"></div>
+    <!-- // #miniAdBox ============================== -->
+
     <div id="footBox"></div>
+    <!-- // #footBox ============================== -->
+
   </div> 
 
   <!-- script -->
