layout_02 pop-area

--- a/c_code/b_layout_test/html/layout_02_result.html
+++ b/c_code/b_layout_test/html/layout_02_result.html
@@ -72,7 +72,18 @@
       <div id="popularContentBox">
         <h3>인기 내용</h3>
         <div class="con_area pop_con_area">
-          
+          <div class="pop_card">
+            <div class="img_context">img</div>
+            <div class="narr_context">narr</div>
+          </div>
+          <div class="pop_card">
+            <div class="img_context">img</div>
+            <div class="narr_context">narr</div>
+          </div>
+          <div class="pop_card">
+            <div class="img_context">img</div>
+            <div class="narr_context">narr</div>
+          </div>
         </div>
       </div>
       <!-- // #populaContentBox ========================== -->
