layout_02 step3 modify

--- a/c_code/b_layout_test/html/layout_02_result.html
+++ b/c_code/b_layout_test/html/layout_02_result.html
@@ -71,7 +71,7 @@
       <!-- content -->
       <div id="popularContentBox">
         <h3>인기 내용</h3>
-        <div class="con_area pop_con_area">
+        <div class="con_area pop_con_area clearfix">
           <div class="pop_card">
             <div class="img_context">img</div>
             <div class="narr_context">narr</div>
@@ -89,12 +89,12 @@
       <!-- // #populaContentBox ========================== -->
       <div id="newContentBox">
         <h3>최신 내용</h3>
-        <div class="con_area new_con_area"></div>
+        <div class="con_area new_con_area clearfix"></div>
       </div>
       <!-- // #newContentBox ========================== -->
       <div id="recommendedContentBox">
         <h3>추천 내용</h3>
-        <div class="con_area recom_con_area"></div>
+        <div class="con_area recom_con_area clearfix"></div>
       </div>
       <!-- // #recommendedContentBox ====================== -->      
       <div id="communityBox">
