--- a/c_code/b_layout_test/html/layout_02_result.html
+++ b/c_code/b_layout_test/html/layout_02_result.html
@@ -89,17 +89,38 @@
       <!-- // #populaContentBox ========================== -->
       <div id="newContentBox">
         <h3>최신 내용</h3>
-        <div class="con_area new_con_area clearfix"></div>
+        <div class="con_area new_con_area clearfix">
+          <div class="new_con_title_area">
+            <div class="new_con_title_img">        
+            </div>
+            <div class="new_con_title_text"></div>
+          </div>
+          <div class="new_con_more_area">
+            <div class="new_con_more_01"></div>
+            <div class="new_con_more_02"></div>
+          </div>
+        </div>
       </div>
       <!-- // #newContentBox ========================== -->
       <div id="recommendedContentBox">
         <h3>추천 내용</h3>
-        <div class="con_area recom_con_area clearfix"></div>
+        <div class="con_area recom_con_area clearfix">
+          <div class="re_con_part_area">re part</div>
+          <div class="re_con_part_area">re part</div>
+          <div class="re_con_part_area">re part</div>
+          <div class="re_con_part_area">re part</div>
+        </div>
       </div>
       <!-- // #recommendedContentBox ====================== -->      
       <div id="communityBox">
         <h3>community</h3>
-        <div class="con_area community_area"></div>
+        <div class="con_area community_area">
+          <ul>
+            <li>community 01</li>
+            <li>community 02</li>
+            <li>community 03</li>
+          </ul>
+        </div>
       </div>
       <!-- // #communityBox ============================== -->
     </div><!-- // .content_area -->
