광고영역, position처리

--- a/c_code/b_layout_test/html/layout_02_result.html
+++ b/c_code/b_layout_test/html/layout_02_result.html
@@ -48,7 +48,15 @@
       </div>
 
       <div class="view_outer">
-        광고 내용
+        <!-- 광고 내용 -->
+        <div class="view_area">
+          <div class="view_01">광고 01</div>
+          <div class="view_02">광고 02</div>
+          <div class="view_03">광고 03</div>
+          <div class="view_04">광고 04</div>
+          <div class="view_05">광고 05</div>
+          <div class="view_06">광고 06</div>
+        </div>
       </div>
     </div>
     <!-- // #adViewBox ============================== -->
