--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -14,6 +14,7 @@
     <!-- li>a[href="./table_01.html"]{table 구조 이해하기} -->
     <li><a href="./table_01.html">table 구조 이해하기</a></li>
     <li><a href="./table_to_div.html">table에서 보여준코드 일부 변경</a></li>
+    <li><a href="./semantic.html">의미를 부여하는 요소(semantic)</a></li>
   </ul>
   <hr />
 
