--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -17,7 +17,7 @@
     <li><a href="./semantic.html">의미를 부여하는 요소(semantic)</a></li>
   </ul>
   <hr />
-
+<!-- ========================================================================= -->
   <h2><abbr title="cascading style sheets">CSS</abbr> 기초내용 정리</h2>
   <ul>
     <li><a href="./selector_01.html">CSS 선택자 첫번째</a></li>
@@ -27,6 +27,7 @@
     <li><a href="./mpbo.html">margin, padding, border, outline and box-sizing</a></li> 
     <li><a href="./position_01.html">position 기초 이해</a></li>
     <li><a href="./position_02.html">position 기초 예제</a></li>
+    <li><a href="./background_01.html">background 이미지 기초 개념</a></li>
   </ul>
 </body>
 </html>
