--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -28,6 +28,7 @@
     <li><a href="./position_01.html">position 기초 이해</a></li>
     <li><a href="./position_02.html">position 기초 예제</a></li>
     <li><a href="./background_01.html">background 이미지 기초 개념</a></li>
+    <li><a href="./ir_is.html">background기능을 이용한 IR기법, IS기법</a></li>
   </ul>
 </body>
 </html>
