ir_sample base setting

--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -18,6 +18,7 @@
   </ul>
   <hr />
 <!-- ========================================================================= -->
+
   <h2><abbr title="cascading style sheets">CSS</abbr> 기초내용 정리</h2>
   <ul>
     <li><a href="./selector_01.html">CSS 선택자 첫번째</a></li>
@@ -29,6 +30,12 @@
     <li><a href="./position_02.html">position 기초 예제</a></li>
     <li><a href="./background_01.html">background 이미지 기초 개념</a></li>
     <li><a href="./ir_is.html">background기능을 이용한 IR기법, IS기법</a></li>
+  </ul>
+
+<!-- ========================================================================= -->
+  <h2>sample web</h2>
+  <ul>
+    <li><a href="./ir_sample.html">ir기법 샘플예시</a></li>
   </ul>
 </body>
 </html>
