ir기법 추가구성

--- a/c_code/a_basic/html/ir_sample.html
+++ b/c_code/a_basic/html/ir_sample.html
@@ -12,13 +12,22 @@
   <!-- layout -->
   <div id="wrap">
     <header id="headBox">
-      <h1><a href="./contents.html">웹기초</a></h1>
+      <h1 class="hidden_wrap">
+        <a href="./contents.html"><span>웹기초</span></a>
+      </h1>
       <nav id="navBox">
-        <h2>web navigation</h2>
+        <h2 class="hidden_context">web navigation</h2>
+        <ul class="hidden_wrap">
+          <li><a href="#"><span>link_01</span></a></li>
+          <li><a href="#"><span>link_02</span></a></li>
+          <li><a href="#"><span>link_03</span></a></li>
+          <li><a href="#"><span>link_04</span></a></li>
+          <li><a href="#"><span>link_05</span></a></li>
+        </ul>
       </nav>
     </header><!-- // #headBox -->
     <section id="viewBox">
-      <h2>광고영역</h2>
+      <h2 class="hidden_context">광고영역</h2>
     </section><!-- // #viewBox -->
     <article id="contentBox">
       <h2>본문내용</h2>
