gcass main image use step_01

--- a/c_code/c_sample_web/index.html
+++ b/c_code/c_sample_web/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <script>
-    window.location = "./html/gcass_main.html";
+    window.location = "./html/gcass_main_imgUse.html";
   </script>
 </body>
 </html>
