gcass main imageUse - backgroundImage 삽입

--- a/c_code/c_sample_web/html/gcass_main_imgUse.html
+++ b/c_code/c_sample_web/html/gcass_main_imgUse.html
@@ -27,16 +27,16 @@
     </header>
     <aside id="sideBox">
       <h2 class="hidden_context">local navigation</h2>
-      <ul>
-        <li><a href="#">home</a></li>
-        <li><a href="#">study</a></li>
-        <li><a href="#">education <i></i></a></li>
+      <ul class="hidden_wrap">
+        <li><a href="#"><span>home</span></a></li>
+        <li><a href="#"><span>study</span></a></li>
+        <li><a href="#"><span>education</span></a></li>
       </ul>
     </aside>
     <section id="viewBox">
       <h2 class="hidden_context">메인 광고영역</h2>  
-      <div class="computer"></div>
-      <div class="adv_narr"></div>
+      <div class="computer"><span class="hidden_context">Lorem ipsum dolor sit amet.</span></div>
+      <div class="adv_narr"><span class="hidden_context">Lorem ipsum dolor sit amet.</span></div>
     </section>
     <footer id="footBox">
       <h2><span class="hidden_context">gcass info</span></h2> 
