--- a/c_code/a_basic/html/ir_is.html
+++ b/c_code/a_basic/html/ir_is.html
@@ -30,9 +30,23 @@
          앞뒤에 설명이 있고 중간에 <span>영역을 감싸처리하는 방법으로 </span>쉽게 복합처리가 가능</a></li>
       </ul>
     </div>
-    <p class="hidden_text">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit praesentium accusantium facere quaerat, ut aliquid, nobis omnis delectus esse molestiae doloremque harum! Cupiditate officia excepturi magnam molestias laboriosam rerum nisi!
-    </p>
+    <div class="part">
+      <h3><abbr title="Image Sprite">IS 기법 이해하기</abbr></h3>
+      <p>조각난 이미지 파일들을 하나의 파일로 병합 후 배경으로 처리해서 웹 문서 전송 속도를 높이는 기법</p>
+      <ul class="is clearfix">
+        <li><span>1줄,1칸 이미지</span></li>
+        <li><span>1줄,3칸 이미지</span></li>
+        <li><span>2줄,1칸 이미지</span></li>
+        <li><span>3줄,3칸 이미지</span></li>
+        <li><span>3줄,5칸 이미지</span></li>
+        <li><a href="#"><span>2,5 이미지</span></a></li>
+        <li><a href="#"><span>4,5 이미지</span></a></li>
+        <li><a href="#"><span>5,7 이미지</span></a></li>
+        <li><button type="button"><span>5,9 이미지</span></button></li>
+        <li><button type="button"><span>5,11 이미지</span></button></li>
+      </ul>
+    </div>
+
   </div>
 
   <!-- script -->
