--- a/c_code/a_basic/html/ir_is.html
+++ b/c_code/a_basic/html/ir_is.html
@@ -45,6 +45,14 @@
         <li><button type="button"><span>5,9 이미지</span></button></li>
         <li><button type="button"><span>5,11 이미지</span></button></li>
       </ul>
+
+      <ul class="is2 clearfix hidden_wrap">
+        <li><a href="#"><span>content_01</span></a></li>
+        <li><a href="#"><span>content_02</span></a></li>
+        <li><a href="#"><span>content_03</span></a></li>
+        <li><a href="#"><span>content_04</span></a></li>
+        <li><a href="#"><span>content_05</span></a></li>
+      </ul>
     </div>
 
   </div>
