--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -30,6 +30,7 @@
     <li><a href="./position_02.html">position 기초 예제</a></li>
     <li><a href="./background_01.html">background 이미지 기초 개념</a></li>
     <li><a href="./ir_is.html">background기능을 이용한 IR기법, IS기법</a></li>
+    <li><a href="./fonts_01.html">폰트 사용에대한 내용</a></li>
   </ul>
 
 <!-- ========================================================================= -->
