line-height, font-family

--- a/c_code/a_basic/html/fonts_01.html
+++ b/c_code/a_basic/html/fonts_01.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../fonts/fontawesome/css/all.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="../css/base/reset.css">
   <link rel="stylesheet" href="../css/base/common.css">
   <link rel="stylesheet" href="../css/src/fonts_01.css">
@@ -29,6 +31,7 @@
         <li>사용되는 서체의 종류</li>
         <li>사용되는 서체의 종류중 english, 한글이 섞여있을때 </li>
         <li>웹폰트를 사용할 때 처리방법으로, 
+            Lorem ipsum dolor sit amet.
             <span>굵기1 또는 서체1</span>, 
             <span>굵기2 또는 서체2</span>, 
             <span>굵기3</span></li>
