font-face요약, letter,word spacing

--- a/c_code/a_basic/html/fonts_01.html
+++ b/c_code/a_basic/html/fonts_01.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../fonts/fontawesome/css/all.css">
   <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
-  
+
   <link rel="stylesheet" href="../css/base/reset.css">
   <link rel="stylesheet" href="../css/base/common.css">
   <link rel="stylesheet" href="../css/src/fonts_01.css">
@@ -32,12 +32,13 @@
         <li>사용되는 서체의 종류중 english, 한글이 섞여있을때 </li>
         <li>웹폰트를 사용할 때 처리방법으로, 
             Lorem ipsum dolor sit amet.
-            <span>굵기1 또는 서체1</span>, 
-            <span>굵기2 또는 서체2</span>, 
-            <span>굵기3</span></li>
+            <span>light font</span>, 
+            <span>normal font</span>, 
+            <span>bold font</span>
+        </li>
         <li>글씨 들여쓰기</li>
-        <li>글자의 사이 간격 (자간)</li>
-        <li>글자의 단어 간격 (어간)</li>
+        <li>글자의 사이 간격 (자간으로 불리움)</li>
+        <li>글자의 단어 간격 <br />(어간이라 불리기도 한다.)</li>
       </ul>
     </div>
   </div>
