단위값이해 기본세팅

--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -31,6 +31,8 @@
     <li><a href="./background_01.html">background 이미지 기초 개념</a></li>
     <li><a href="./ir_is.html">background기능을 이용한 IR기법, IS기법</a></li>
     <li><a href="./fonts_01.html">폰트 사용에대한 내용</a></li>
+    <li><a href="./fonts_02.html">웹폰트 제작방법, 기타 font</a></li>
+    <li><a href="./unit_01.html">기본형 단위 - px, pt, %, em, rem</a></li>
   </ul>
 
 <!-- ========================================================================= -->
