--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -33,6 +33,7 @@
     <li><a href="./fonts_01.html">폰트 사용에대한 내용</a></li>
     <li><a href="./fonts_02.html">웹폰트 제작방법, 기타 font</a></li>
     <li><a href="./unit_01.html">기본형 단위 - px, pt, %, em, rem</a></li>
+    <li><a href="./unit_02.html">기본형 단위 - vw, vh, ch</a></li>
   </ul>
 
 <!-- ========================================================================= -->
