sideBox area svg to font

--- a/c_code/c_sample_web/html/gcass_main_refont.html
+++ b/c_code/c_sample_web/html/gcass_main_refont.html
@@ -6,7 +6,8 @@
 <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../fonts/fontawesome/css/all.css">
-  
+  <link rel="stylesheet" href="../fonts/icomoon/style.css">
+
   <link rel="stylesheet" href="../css/base/reset.css">
   <link rel="stylesheet" href="../css/base/common.css">
   <link rel="stylesheet" href="../css/src/gcass_main_refont.css">
@@ -44,7 +45,7 @@
       <ul>
         <li><a href="#">home</a></li>
         <li><a href="#">study</a></li>
-        <li><a href="#">education <i></i></a></li>
+        <li><a href="#">education <i class="icon-long_arrow"></i></a></li>
       </ul>
     </aside>
     <section id="viewBox">
