javascript data type - number, string

--- a/c_code/d_javascript/html/content.html
+++ b/c_code/d_javascript/html/content.html
@@ -10,7 +10,9 @@
   <div class="part">
     <h2>javascript 기초내용</h2>
     <ul>
+      <li><a href="./js_insert.html">자바스크립트 코드 삽입위치</a></li>
       <li><a href="./js_01_var.html">변수, 확인</a></li>
+      <li><a href="./js_02_dataType.html">문서 자료형</a></li>
     </ul>
   </div>
 </body>
