--- a/c_code/a_basic/html/contents.html
+++ b/c_code/a_basic/html/contents.html
@@ -11,10 +11,11 @@
   <h2><abbr title="hyper text markup language">HTML</abbr> 기초 내용 정리</h2>
   <ul>
     <li><a href="./a_base_code.html">기본 코드형식 첫번째</a></li>
-    <!-- li>a[href="./table_01.html"]{table 구조 이해하기} -->
     <li><a href="./table_01.html">table 구조 이해하기</a></li>
     <li><a href="./table_to_div.html">table에서 보여준코드 일부 변경</a></li>
     <li><a href="./semantic.html">의미를 부여하는 요소(semantic)</a></li>
+    <li><a href="./form_01.html">폼요소 이해하기1</a></li>
+    <li><a href="./form_02.html">폼요소 이해하기2 - type속성 및 멀티기능 이해하기</a></li>
   </ul>
   <hr />
 <!-- ========================================================================= -->
